# ChatApplication

./: .gitignore  .gitmodules  .gitmodules.swp
Client/Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Windows/: Windows.sln
Client/Windows/Windows/: App.xaml.cs  Client.cs  MainWindow.xaml  MainWindow.xaml.cs  Windows.csproj
Client/WindowsApplication/: WindowsApplication.sln
Client/WindowsApplication/WindowsApplication/: App.xaml.cs  Client.cs  Cryptology.cs  DigitalSignature.cs  Friend.cs  MainWindow.xaml  MainWindow.xaml.cs  Manager.xaml  Manager.xaml.cs  RSA.cs  User.cs  WindowsApplication.csproj  files.cs
Client/WindowsApplication/WindowsApplication/Files/cryptography/: keys.txt
Client/WindowsApplication/WindowsApplication/Files/friends/: friendsmanager.txt
Client/WindowsApplication/WindowsApplication/Properties/: AssemblyInfo.cs
Documentation/: package.xlsx
Server/: .gitmodules.swp
Server/Server/: CMakeLists.txt
Server/Server/include/: Blocks.h  DigitalSignature.h  Server.h  mySQLConnect.h  rsa.h
Server/Server/src/: Blocks.cpp  DigitalSignature.cpp  Server.cpp  mySQLConnect.cpp  rsa.cpp  sha256.cpp
